successfully fetching data from backend

--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,7 @@ footer{
 }
 
 #individual-post-content{
+    font-size: 18px;
     padding: 24px 16px 0 16px;
     line-height: 1.4;
     color: #495057;
